-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3
-
None
-
-
cfd7198d1 (dev), 45d532b78 (6.8), 4d3b4853c (tqtc/lts-6.5)
When using a ListElement with enums that are imported with the "as" syntax, the enum is not correctly evaluated by the ListModel (see "example_not_working.qml").
When the import is used without "as", the example is working as expected (see "example_working.qml").
- is duplicated by
-
QTBUG-96555 Enum's enclosing type as a qualifier breaks enums for ListElement (again)
-
- Closed
-
- relates to
-
QTBUG-96555 Enum's enclosing type as a qualifier breaks enums for ListElement (again)
-
- Closed
-
For Gerrit Dashboard: QTBUG-118879 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
597613,2 | CustomParser: Fix enum handling | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
599636,2 | CustomParser: Fix enum handling | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
601605,3 | CustomParser: Fix enum handling | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |