CustomParser: Fix enum handling

If we have an import namespace, QQmlTypeNameCache::isValid will always
return true; what we want to check instead is whether the type is valid,
or whether we need to query the namespace.

Amends a363aa3df44da399d2aeb8785608501eae50e600.

Pick-to: 6.5 6.8
Fixes: QTBUG-118879
Change-Id: Iaa9db015979c9454662c6fbcd691dbfb03a3d053
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>