tests/auto/qml/qqmllanguage/tst_qqmllanguage.cpp
@@ -6303,7 +6303,7 @@ class EnumTester : public QObject
 public:
     enum Types
     {
-        FIRST = 0,
+        FIRST = 42,
         SECOND,
         THIRD
     };
@@ -6317,13 +6317,18 @@ void tst_qqmllanguage::qualifiedScopeInCustomParser()
     QQmlEngine engine;
     QQmlComponent component(&engine);
     component.setData("import QtQml.Models 2.12\n"
+                      "import QtQml\n"
                       "import scoped.custom.test 1.0 as BACKEND\n"
                       "ListModel {\n"
+                      "    id: root\n"
+                      "    property int num: -1\n"
                       "    ListElement { text: \"a\"; type: BACKEND.EnumTester.FIRST }\n"
+                      "    Component.onCompleted: {  root.num = root.get(0).type }\n"
                       "}\n", QUrl());
     QVERIFY2(component.isReady(), qPrintable(component.errorString()));
     QScopedPointer<QObject> obj(component.create());
     QVERIFY(!obj.isNull());
+    QCOMPARE(obj->property("num").toInt(), 42);
 }
 
 void tst_qqmllanguage::checkUncreatableNoReason()
